Add authentication
Add optional member login property to member entity, that stores username and password (hash)
Add auth service that provides login, refresh and logout endpoints
Load signing and verification key on startup and in regular intervals
Add authentication middleware and grpc method options to skip authentication for that endpoint
Handle token fetching and renewal on the frontend
Add script to generate a valid signing key
