# ourspace-frontend/src/router.ts
@@ -5,6 +5,7 @@ import MembersEditView from "@/views/members/MemberEditView.vue";
 import CardsView from "@/views/cards/CardsView.vue";
 import CardEditView from "@/views/cards/CardEditView.vue";
 import TerminalView from "@/views/terminal/TerminalView.vue";
+import LoginView from "@/views/login/LoginView.vue";
 
 const router = createRouter({
   history: createWebHistory(import.meta.env.BASE_URL),
@@ -13,6 +14,14 @@ const router = createRouter({
       path: '/',
       name: 'home',
       component: HomeView,
+    },
+    {
+      path: '/login',
+      name: "login",
+      component: LoginView,
+      meta: {
+        authenticated: false,
+      },
     },
     {
       path: '/members',
